// api/soma.proto
syntax = "proto3";

package calculator;
option go_package = "services/calculator";

service CalculatorService {
  rpc Sum (Request) returns (Response);
  rpc Divide (Request) returns (Response);
  rpc Multiply (Request) returns (Response);
  rpc Subtract (Request) returns (Response);
}

message Request {
  int32 a = 1;
  int32 b = 2;
}

message Response {
  int32 result = 1;
}